почему не подгружается тень

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <main>
 <!-- Шапка Профиля -->
-<section class="hero">
+<section class="hero overlay">
    <div class=" container">
       <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
       <!-- Кнопка-->  
