--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
    <div class="container">
       <h2 class="no-see"> особенности</h2>
       <ul class="features">
-         <li>
+         <li class="feature-item icon-antena">
             <h3 class="feature">Внимание к деталям</h3>
             <p class="about-feature">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
          </li>
-         <li>
+         <li class="feature-item icon-clock">
             <h3 class="feature">Пунктуальность</h3>
             <p class="about-feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
          </li>
-         <li>
+         <li class="feature-item icon-diagram">
             <h3 class="feature">Планирование</h3>
             <p class="about-feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
          </li>
-         <li>
+         <li class="feature-item icon-astronaut">
             <h3 class="feature">Современные технологии</h3>
             <p class="about-feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
          </li>
@@ -102,9 +102,8 @@
 <!-- Наша команда -->
 <section class="section bg">
    <div class="container">
-      <h2 class="team-head">Наша команда</h2> 
-      <ul class="team-members">
-         <li class="card-shadow">
+      <h2 class="tittle">Наша команда</h2> <ul class="list-team">
+         <li class="item-team">
             <img src="img/img_team/product_designer.jpg"
                   alt="Product Designer"
                   width="270"
@@ -118,8 +117,27 @@
                   Product Designer
                </p>
             </div>
+            <div>
+               <ul class="socials-team">
+                  <li>
+                     <a>
+                        <svg class="icon-social">
+                           <use xlink:href="img/icons.svg#insagram"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a>dasd</a></li>
+                  <li>
+                     <a>das</a>
+                  </li>
+                  <li>
+                     <a>das</a>
+                  </li>
+               </ul> 
+            </div>
          </li>
-         <li class="card-shadow">
+         <li class="item-team">
             <img src="img/img_team/front_end_developer.jpg"
                   alt="Front End developer"
                   width="270"
@@ -133,8 +151,16 @@
                      Frontend Developer
                   </p>
             </div>
+            <div>
+                  <ul class="socials-team">
+                  <li><a></a></li>
+                  <li><a></a></li>
+                  <li><a></a></li>
+                  <li><a></a></li>
+               </ul> 
+            </div>
          </li>
-         <li class="card-shadow">
+         <li class="item-team">
             <img src="img/img_team/marketing.jpg" 
                   alt="Marketing Worker"
                   width="270" 
@@ -142,14 +168,22 @@
                   class="work-foto">
             <div class="card-bot">
                <h3 class="team-member">
-                  Николай Тарасов
+                  Николай Тарасов<a>
                </h3>
                <p class="member-description">
                   Marketing
                </p>
             </div>
+            <div>
+                  <ul class="socials-team">
+                  <li><a></a></li>
+                  <li><a></a></li>
+                  <li><a></a></li>
+                  <li><a></a></li>
+               </ul> 
+            </div>
          </li>
-         <li class="card-shadow">
+         <li class="item-team">
             <img src="img/img_team/ui_designer.jpg" 
                   alt="UI Designer" 
                   width="270" 
@@ -164,9 +198,40 @@
                </p>
                </li>
             </div>
+            <div>
+               <ul class="socials-team">
+                  <li>
+                     <a></a>
+                  </li>
+                  <li>
+                     <a></a>
+                  </li>
+                  <li>
+                     <a></a>
+                  </li>
+                  <li>
+                     <a></a>
+                  </li>
+               </ul> 
+            </div>
       </ul>
     </div>  
 </section>
+<div class="container">
+   <section class="section">
+      <h2 class="tittle">Постоянные клиенты</h2>
+      <div>
+         <ul>
+            <li><a></a></li>
+            <li><a></a></li>
+            <li><a></a></li>
+            <li><a></a></li>
+            <li><a></a></li>
+            <li><a></a></li>
+         </ul>
+      </div>
+   </section>
+</div></a>
 </main>
 
 <!-- Подвал -->
