--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
 
       </nav>
       <ul class="head-infos">
-         <li><a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a></li>
-         <li><a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a></li>
+         <li class="head-item">
+            <svg class="icon-head" width="16px" height="12px">
+               <use href="./img/icons/sprite.svg#icon-envelope-hover"></use>
+            </svg>
+            <a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a></li>
+         <li>
+            <svg class="icon-head">
+               <use link:href="./img/icons.svg/sprite.svg#smartphone"></use>
+            </svg>
+            <a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a></li>
       </ul>
    </div>
 </header>
@@ -121,8 +129,9 @@
                <ul class="socials-team">
                   <li>
                      <a>
-                        <svg class="icon-social">
-                           <use xlink:href="img/icons.svg#insagram"></use>
+                        <svg class="icon-socials" >
+                           <use href="">
+                           </use>
                         </svg>
                      </a>
                   </li>
