--- a/portfolio.html
+++ b/portfolio.html
@@ -20,21 +20,31 @@
 <body>
 <!-- Верхняя линия -->
 <header>
-    <div class="container head">
-        <a href="index.html" class="logo">Web<span class="logo-black">Studio</span></a>
-        <nav>
-            <ul class="navigators">
-                <li><a href="index.html" class="navigator">Студия</a></li>
-                <li><a href="portfolio.html" class="navigator current">Портфолио</a></li>
-                <li><a href="" class="navigator">Контакты</a></li>
-            </ul>
-
-        </nav>
-        <ul class="head-infos">
-            <li><a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a></li>
+<div class="container head">
+    <a href="index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+    <nav>
+        <ul class="navigators">
+            <li><a href="index.html" class="navigator">Студия</a></li>
+            <li><a href="portfolio.html" class="navigator current">Портфолио</a></li>
+            <li><a href="" class="navigator">Контакты</a></li>
         </ul>
-    </div>
+
+    </nav>
+    <ul class="head-infos">
+        <li class="head-item">
+            <svg class="icon-head" width="16px" height="12px">
+                <use href="./img/icons/sprite.svg#envelope"></use>
+            </svg>
+            <a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a>
+        </li>
+        <li class="head-item">
+            <svg class="icon-head">
+                <use href="./img/icons/sprite.svg#smartphone"></use>
+            </svg>
+            <a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a>
+        </li>
+    </ul>
+</div>  
 </header>
 
 <main>
