--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,7 @@
             <div>
                 <ul class="footer-list">
                     <li>
-                        <a class="footer-link">
+                        <a href="#" class="footer-link">
                             <svg class="socials-icon" width="20" height="20">
                                 <use href="./img/icons/sprite.svg#instagram">
 
@@ -167,8 +167,8 @@
                         </a>
                     </li>
                     <li>
-                        <a class="footer-link">
-                            <svg class="footer-icon" width="20" height="20">
+                        <a href="#" class="footer-link">
+                            <svg class="socials-icon" width="20" height="20">
                                 <use href="./img/icons/sprite.svg#twitter">
 
                                 </use>
@@ -176,7 +176,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="footer-link">
+                        <a href="#" class="footer-link">
                             <svg class="socials-icon" width="20" height="20">
                                 <use href="./img/icons/sprite.svg#facebook">
 
@@ -185,7 +185,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="footer-link">
+                        <a href="#" class="footer-link">
                             <svg class="socials-icon" width="20" height="20">
                                 <use href="./img/icons/sprite.svg#linkedin">
 
